--- a/.github/workflows/auto-merge-on-approval-on-pr-into-prod.yml
+++ b/.github/workflows/auto-merge-on-approval-on-pr-into-prod.yml
@@ -2,13 +2,17 @@ name: auto-merge-on-approval-on-pr-into-prod
 on:
   pull_request_review:
     types: [submitted]
+    branches:
+      - production
 
 env:
   GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
 jobs:
   approved:
     name: "Check approved"
-    if: github.event.review.state == 'approved'
+    if: |
+      github.event.review.state == 'approved' &&
+      github.event.pull_request.base.ref == 'production'
     runs-on: ubuntu-latest
     steps:
       - name: "Merge Pull Request"
