--- a/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
+++ b/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
@@ -20,6 +20,7 @@ jobs:
           const currentPRIntoProd = await github.rest.pulls.list({
             owner,
             repo,
+            state: 'open',
             head: '${{ github.base_ref }}',
             base: 'production'
           })
