--- a/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
+++ b/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
@@ -20,9 +20,12 @@ jobs:
           const currentPRIntoProd = await github.rest.pulls.list({
             owner,
             repo,
-            head: '${{ github.base_ref }}',
+            state: 'open',
+            head: 'master',
             base: 'production'
           })
+
+          console.log(currentPRIntoProd)
 
           if (currentPRIntoProd && currentPRIntoProd.data.length == 0) {
             const result = await github.rest.pulls.create({
