--- a/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
+++ b/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
@@ -21,7 +21,7 @@ jobs:
             owner,
             repo,
             state: 'open',
-            head: 'master',
+            head: '${{ github.base_ref }}',
             base: 'production'
           })
 
