--- a/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
+++ b/.github/workflows/create-pr-into-prod-from-master-on-pr-merge-into-master.yml
@@ -21,10 +21,12 @@ jobs:
             owner,
             repo,
             state: 'open',
-            head: 'master',
+            head: '${{ github.base_ref }}',
             base: 'production'
           })
 
+          console.log("${{ github }}")
+          console.log("\n\n")
           console.log(currentPRIntoProd)
 
           if (currentPRIntoProd && currentPRIntoProd.data.length == 0) {
