--- a/.github/workflows/only-allow-master-to-merge-into-prod.yml
+++ b/.github/workflows/only-allow-master-to-merge-into-prod.yml
@@ -1,6 +1,8 @@
 name: only-allow-master-to-merge-into-prod
 on:
   pull_request:
+    types:
+      - open
     branches:
       - production
 jobs:
